<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mobiilidyno</string>
    <string name="action_settings">Settings</string>
    <string name="asetuksetOtsikko">Arvojen asetukset</string>
    <string name="kuskinPainoTextView">Kuskin Paino: </string>
    <string name="pyoranPainoTextView">Pyörän Paino: </string>
    <string name="aloitaMittausButton">Aloita mittaus</string>
    <string name="lopetaMittausButton">Lopeta mittaus</string>
    <string name="selaaButton">Selaa mittauksia</string>
    <string name="asetuksetButton">Asetukset</string>
    <string name="tietojaButton">Tietoja</string>
    <string name="asetuksetTallennaButton">Tallenna</string>
    <string name="valitysSuhteetTextView">Välityssuhteet</string>
    <string name="renkaidenKokoTextView">Renkaiden koko</string>
    <string name="mittaustenSelausOtsikko">Mittaukset</string>
    <string name="tietoaOhjelmastaOtsikko">Tietoa ohjelmasta</string>
    <string name="title_activity_mittaus">Mittaus käynnissä</string>
    <string name="hello_world">Hello world!</string>
    <string name="nopeus">Nopeus</string>
    <string-array name="suureet_array">
        <item>Kaikki</item>
        <item>Teho</item>
        <item>Nopeus</item>
        <item>Kiihtyvyys</item>
    </string-array>
    <string name="tiedot">Versio: 0.1\n\nTekijät: Aku Parviainen, Jesse Valle, Saku Kaarakainen\n\nLuokka: ETX10SP\n\n(c)Savonia AMK</string>

</resources>
