<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
         >

       <Button
            android:id="@+id/aloitaMittausButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aloitaMittausButton"
             />
        <Button
            android:id="@+id/selaaButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selaaButton"
             />
        <Button
            android:id="@+id/asetuksetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asetuksetButton"
             />
        <Button
            android:id="@+id/tietojaButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tietojaButton"
            />
    </LinearLayout>
    
</RelativeLayout>
