<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MittausActivity" >

    <TextView
        android:id="@+id/textView_laskuri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="110dp"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/button_lopetaMittaus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView_laskuri"
        android:layout_centerVertical="true"
        android:onClick="OnClickOnMittausActivity"
        android:text="@string/lopetaMittausButton" />

    <TextView
        android:id="@+id/textView_nopeus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_lopetaMittaus"
        android:layout_alignLeft="@+id/button_lopetaMittaus"
        android:layout_marginBottom="19dp"
        android:text="@string/nopeus" />

</RelativeLayout>