<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/asetuksetOtsikkoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/asetuksetOtsikko" >
    </TextView>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pyoranPainoTextView"
            />
        <EditText
            android:id="@+id/pyoranPainoEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kuskinPainoTextView"
            />
        <EditText
            android:id="@+id/kuskinPainoEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number|numberDecimal"
            />
    </LinearLayout>
    
    <!-- näitä tietoja ei tarvita laskennassa
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valitysSuhteetTextView"
            />
        <EditText
            android:id="@+id/valitysSuhteetEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/renkaidenKokoTextView"
            />
        <EditText
            android:id="@+id/renkaidenKokoEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
    </LinearLayout>
    -->
    
    <Button
        android:id="@+id/asetuksetTallennaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/asetuksetTallennaButton" />

</LinearLayout>
